added SAST tools for the payment service